# StarHub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  compile_test.cu  rgbd_to_pcd.cpp  rgbd_to_pcd.cu  test_gl.cpp
examples/mono_star/: CMakeLists.txt  app.cu  app_wo_kp.cu  test_kp.cu  test_kp_3d.cu
examples/mono_star/common/: CMakeLists.txt  ConfigParser.cu  ConfigParser.h  Constants.cpp  Macros.h  StarStageBuffer.h  ThreadProcessor.h  dynamic_geometry_types.h  frame_buffer.h  fusion_types.h  global_configs.h  measure_types.h  monitor_types.h  nodeflow_types.h  opticalflow_types.h  optimization_types.h  segmentation_types.h  skinner_types.h  solver_types.h  term_offset_types.h
examples/mono_star/geometry/: CMakeLists.txt  DynamicGeometryFusor.cu  DynamicGeometryFusor.h  DynamicGeometryProcessor.cu  DynamicGeometryProcessor.h  GeometryFusor.cu  GeometryFusor.h
examples/mono_star/measure/: CMakeLists.txt  KeyPointDetectProcessor.cu  KeyPointDetectProcessor.h  KeyPointProcessor.cu  KeyPointProcessor.h  MeasureProcessorOffline.cu  MeasureProcessorOffline.h  NodeMotionProcessor.cu  NodeMotionProcessor.h  OpticalFlowProcessorGMA.cu  OpticalFlowProcessorGMA.h  OpticalFlowProcessorOffline.cu  OpticalFlowProcessorOffline.h  SegmentationProcessorOffline.cu  SegmentationProcessorOffline.h
examples/mono_star/opt/: CMakeLists.txt  DenseImageDebug.cu  DenseImageHandler.cu  DenseImageHandler.h  DenseImageJacobianResidual.cu  ImageTermKNNFetcher.cu  ImageTermKNNFetcher.h  JtDotResidualIndexed.cu  JtJMaterializer.cu  JtJMaterializer.h  JtJMaterializerBinBlockCSR.cu  JtJMaterializerSanityCheck.cu  KeyPointHandler.cu  KeyPointHandler.h  Node2TermsIndex.cpp  Node2TermsIndex.cu  Node2TermsIndex.h  NodeGraphHandler.cu  NodeGraphHandler.h  NodeMotionHandler.cu  NodeMotionHandler.h  NodePair2TermsIndex.cpp  NodePair2TermsIndex.cu  NodePair2TermsIndex.h  NodePairRowColumnIndex.cpp  NodePairRowColumnIndex.cu  OptimizationProcessorWarpSolver.cpp  OptimizationProcessorWarpSolver.cu  OptimizationProcessorWarpSolver.h  PenaltyConstants.cpp  PenaltyConstants.cu  PenaltyConstants.h  PreconditionerBlocked.cpp  PreconditionerBlocked.cu  PreconditionerRhsBuilder.cpp  PreconditionerRhsBuilder.cu  PreconditionerRhsBuilder.h  README.md  SolverIterationData.cpp  SolverIterationData.cu  (+6 more)
examples/super_recon/: CMakeLists.txt  README.md  app.cu
examples/super_recon/common/: CMakeLists.txt  ConfigParser.cu  Constants.cpp  Constants.h  global_configs.h
examples/super_recon/measure/: CMakeLists.txt  MeasureProcessorOffline.h
libs/star/common/: ArraySlice.h  ArrayView.h  BinaryFileStream.cu  BinaryFileStream.h  CMakeLists.txt  Counter.h  GBufferArray.h  Lock.h  Serializer.h  StageBuffer.h  Stream.h  Stream.hpp  SyncArray.h  algorithm_types.cu  algorithm_types.cuh  algorithm_types.h  color_transfer.h  common_point_cloud_utils.h  common_texture_utils.cu  common_texture_utils.h  common_types.h  common_types_cpu.h  common_utils.cu  common_utils.h  constants.h  custom_type_traits.h  data_transfer.cu  data_transfer.cuh  data_transfer.h  device_intrinsics.cuh  encode_utils.h  logging.h  macro_utils.h  point_cloud_typedefs.h  safe_call_utils.hpp  sanity_check.cu  sanity_check.cuh  sanity_check.hpp  string_uilts.cpp  string_utils.hpp  (+1 more)
libs/star/common/containers/: device_array.hpp  device_memory.cpp  device_memory.cu  device_memory.hpp  kernel_containers.hpp  safe_call.hpp
libs/star/common/types/: floatX.h  typeX.h  ucharX.h  ushortX.h  vecX_op.h
libs/star/geometry/: CMakeLists.txt  README.md  WarpField.h  constants.h  geometry_types.h
libs/star/geometry/geometry_map/: GeometryMap.h  SurfelMap.cu  SurfelMap.h  SurfelMapInitializer.cu  SurfelMapInitializer.h
libs/star/geometry/keypoint/: KeyPointFusor.cu  KeyPointFusor.h  KeyPointMatcher.cu  KeyPointMatcher.h  KeyPoints.cu  KeyPoints.h
libs/star/geometry/node_graph/: NodeGraph.cpp  NodeGraph.cu  NodeGraph.h  NodeGraphManipulator.cpp  NodeGraphManipulator.cu  NodeGraphManipulator.h  Skinner.cu  Skinner.h  brute_force_knn.cuh  node_graph_constants.h  node_graph_opticalflow.cu  node_graph_opticalflow.h  skinner_types.h
libs/star/geometry/render/: GLClearValues.h  GLLiveSurfelGeometryVBO.cu  GLLiveSurfelGeometryVBO.h  GLRenderedMaps.cu  GLRenderedMaps.h  GLShaderProgram.cu  GLShaderProgram.h  GLSurfelGeometryVAO.cu  GLSurfelGeometryVAO.h  GLSurfelGeometryVBO.cu  GLSurfelGeometryVBO.h  Renderer.cu  Renderer.h  RendererDraw.cu  RendererVertexBufferArrays.cu  glad.c
libs/star/geometry/rgbd_image/: RGBDImage.h
libs/star/geometry/sampling/: VoxelSubsampler.h  VoxelSubsamplerSorting.cu  VoxelSubsamplerSorting.h
libs/star/geometry/surfel/: DynamicGeometryAppendHandler.cu  DynamicGeometryAppendHandler.h  FusionRemainingSurfelMarker.cu  FusionRemainingSurfelMarker.h  GeometryCompactHandler.cu  GeometryCompactHandler.h  GeometryFusor.cu  GeometryFusor.h  SurfelFusionHandler.cu  SurfelFusionHandler.h  SurfelGeometry.cu  SurfelGeometry.h  SurfelGeometryInitializer.cu  SurfelGeometryInitializer.h  SurfelNodeDeformer.cu  SurfelNodeDeformer.h  surfel_format.h  surfel_fusion_dev.cuh  surfel_fusion_types.h
libs/star/geometry/tsdf/: Tsdf.cu  Tsdf.h  bilinear_interpolation.cuh  marching_cube.cu  marching_cube.h  mc_tables.hpp  raycast_tsdf.cu  raycast_tsdf.h  tsdf_constants.h  update_tsdf.cu  update_tsdf.h
libs/star/geometry/types/: fusion_types.h  measure_types.h  solver_types.h
libs/star/io/: CMakeLists.txt  FetchInterface.h  GenericFileFetch.cpp  GenericFileFetch.h  VolumeDeformFileFetch.cpp  VolumeDeformFileFetch.h  YCBPoseReader.cpp  YCBPoseReader.h
libs/star/torch_utils/: CMakeLists.txt  tensor_transfer.cpp  tensor_transfer.h  torch_model.h
libs/star/torch_utils/app/: tensor_transfer.cu
libs/star/visualization/: CMakeLists.txt  Visualizer.Constants.cu  Visualizer.Graph.cu  Visualizer.Graph.cuh  Visualizer.Host.cpp  Visualizer.Host.h  Visualizer.Image.cu  Visualizer.PointCloud.cu  Visualizer.PointCloud.cuh  Visualizer.PolygonMesh.cu  Visualizer.Semantic.cu  Visualizer.Semantic.cuh  Visualizer.Transform.cu  Visualizer.h
(+121 files in other folders)
