file(GLOB MONO_COMMON_SRC *.h *.hpp *.cpp *.cu)
source_group("src" FILES ${MONO_COMMON_SRC})
add_library(mono_star_common_lib SHARED ${MONO_COMMON_SRC})
set_target_properties(mono_star_common_lib PROPERTIES LINKER_LANGUAGE CUDA)
# Link library (Commonly shared lib)
target_link_libraries(mono_star_common_lib ${OpenCV_LIBRARIES})
target_link_libraries(mono_star_common_lib ${PCL_COMMON_LIBRARIES})
target_link_libraries(mono_star_common_lib ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(mono_star_common_lib cuda)