file(GLOB SR_COMMON_SRC *.h *.hpp *.cpp *.cu)
source_group("src" FILES ${SR_COMMON_SRC})
add_library(sr_common_lib SHARED ${SR_COMMON_SRC})
set_target_properties(sr_common_lib PROPERTIES LINKER_LANGUAGE CUDA)
# Link library (Commonly shared lib)
target_link_libraries(sr_common_lib ${OpenCV_LIBRARIES})
target_link_libraries(sr_common_lib ${PCL_COMMON_LIBRARIES})
target_link_libraries(sr_common_lib ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(sr_common_lib cuda)