file(GLOB SR_MEASURE_SRC *.h *.hpp *.cpp *.cu)
source_group("src" FILES ${SR_MEASURE_SRC})
add_library(sr_measure_lib SHARED ${SR_MEASURE_SRC})
set_target_properties(sr_measure_lib PROPERTIES LINKER_LANGUAGE CUDA)
# Link library (Commonly shared lib)
target_link_libraries(sr_measure_lib sr_common_lib common_lib geometry_lib torch_utils_lib)