file(GLOB COMMON_SRC *.h *.hpp *.cuh *.cpp *.cu containers/*.hpp containers/*.cuh containers/*.cpp containers/*.cu)
source_group("src" FILES ${COMMON_SRC})
add_library(star_common_lib SHARED ${COMMON_SRC})
set_target_properties(star_common_lib PROPERTIES LINKER_LANGUAGE CUDA)
target_link_libraries(star_common_lib ${OpenCV_LIBRARIES})
target_link_libraries(star_common_lib ${PCL_COMMON_LIBRARIES})
target_link_libraries(star_common_lib ${Boost_FILESYSTEM_LIBRARY})