file(GLOB IO_SRC *.h *.hpp *.cpp)
source_group("src" FILES ${IO_SRC})
add_library(io_lib SHARED ${IO_SRC})
target_link_libraries(io_lib ${OpenCV_LIBRARIES})
target_link_libraries(io_lib ${PCL_COMMON_LIBRARIES})
target_link_libraries(io_lib ${PCL_IO_LIBRARIES})
target_link_libraries(io_lib ${Boost_FILESYSTEM_LIBRARY})